[gd_scene load_steps=3 format=3 uid="uid://d0mlxocgocsix"]

[ext_resource type="Script" path="res://Script/RotatingBar.gd" id="1_1qlxx"]
[ext_resource type="Texture2D" uid="uid://b07qgly7ehal" path="res://Assets/DP_screw.png" id="2_qhfot"]

[node name="RotatingBar" type="Node2D"]
rotation = -3.14159
scale = Vector2(0.592406, 0.367545)
script = ExtResource("1_1qlxx")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Polygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
scale = Vector2(30, 30)
polygon = PackedVector2Array(0, -2, 22, -2, 22, 2, 0, 2)

[node name="Polygon2D" type="Polygon2D" parent="."]
scale = Vector2(30, 30)
color = Color(0.858824, 0.858824, 0.858824, 1)
polygon = PackedVector2Array(0, -2, 22, -2, 22, 2, 0, 2)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Wait_Timer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 2.38419e-07)
scale = Vector2(0.261075, 0.41978)
texture = ExtResource("2_qhfot")
region_enabled = true
region_rect = Rect2(2.03897, 0.628546, 193.961, 195.371)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Wait_Timer" to="." method="_on_wait_timer_timeout"]
